# fastmcp-simple-adk

fastmcp-simple/: README.md  pyproject.toml
fastmcp-simple/fastmcp_simple/: client.py  server.py
fastmcp-simple/fastmcp_simple/agent/: .env.example  README.md  agent.py
