[project]
name = "fastmcp-simple"
version = "0.1.0"
description = "A simple project demonstrating FastMCP and Google ADK."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp",
    "requests",
    "google-adk",
    "google-genai>=1.19.0",
    "fastapi>=0.115.12",
    "uvicorn>=0.34.3",
]

[project.scripts]
fastmcp-simple = "fastmcp_simple.server:main"

[tool.uv]
dev-dependencies = [
    "ruff",
] 

[tool.uv.workspace]
members = [
    "fastmcp_simple/agent",
]
